@@ -237,6 +237,7 @@ char *lightgun_types_list[LIGHTGUN_TOTAL]={
     "Gunstick Sinclair 2",
     "Gunstick Kempston",
     "Magnum (AUX port)",
+    "Magnum (EAR port)",
     "Defender Light Gun",
     "Stack Light Rifle",
     "Trojan Light Pen (EAR port)"
