@@ -75,14 +75,15 @@ extern z80_bit lightgun_emulation_enabled;
 extern int lightgun_emulation_type;
 extern z80_bit lightgun_scope;
 
-#define LIGHTGUN_TOTAL 7
+#define LIGHTGUN_TOTAL 8
 #define GUNSTICK_SINCLAIR_1 0
 #define GUNSTICK_SINCLAIR_2 1
 #define GUNSTICK_KEMPSTON 2
 #define MAGNUM_AUX 3
-#define DEFENDER_LIGHTGUN 4
-#define STACK_LIGHT_RIFLE 5
-#define TROJAN_LIGHT_PEN_EAR 6
+#define MAGNUM_EAR 4
+#define DEFENDER_LIGHTGUN 5
+#define STACK_LIGHT_RIFLE 6
+#define TROJAN_LIGHT_PEN_EAR 7
 
 
 extern void lightgun_draw_scope(void);
